Fixed principal input, Fixed Center alignment

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body
     
     
 }
+h1
+{
+    text-align: center;
+}
 #container{
     background-color: white;
     height: auto;
@@ -15,6 +19,12 @@ body
     padding: 1%;
     
 }   
+#child{
+    
+    position: relative;
+    top: 50%; 
+    left: 30%;
+}
 
 h1
 {
